--- a/config.yaml
+++ b/config.yaml
@@ -29,95 +29,95 @@ models:
   - name: "GPT-3.5 Turbo"
     variant: "gpt-3.5-turbo-0125"
     provider: "OpenAI"
-    prompt: 0.0000005
-    completion: 0.0000015
+    prompt: "0.50 / 1000000"
+    completion: "1.50 / 1000000"
   - name: "GPT-4"
     variant: "gpt-4-0613"
     provider: "OpenAI"
-    prompt: 0.00003
-    completion: 0.00006
+    prompt: "30 / 1000000"
+    completion: "60 / 1000000"
   - name: "GPT-4 Turbo"
     variant: "gpt-4-turbo-2024-04-09"
     provider: "OpenAI"
-    prompt: 0.00001
-    completion: 0.00003
+    prompt: "10 / 1000000"
+    completion: "30 / 1000000"
   - name: "GPT-4o"
     variant: "gpt-4o-2024-05-13"
     provider: "OpenAI"
-    prompt: 0.000005
-    completion: 0.000015
+    prompt: "5 / 1000000"
+    completion: "15 / 1000000"
   - name: "Claude-3.5 Sonnet"
     variant: "claude-3-5-sonnet-20240620"
     provider: "Anthropic"
-    prompt: 0.000003
-    completion: 0.000015
+    prompt: "3 / 1000000"
+    completion: "15 / 1000000"
   - name: "Claude-3 Opus"
     variant: "claude-3-opus-20240229"
     provider: "Anthropic"
-    prompt: 0.000015
-    completion: 0.000075
+    prompt: "15 / 1000000"
+    completion: "75 / 1000000"
   - name: "Claude-3 Sonnet"
     variant: "claude-3-sonnet-20240229"
     provider: "Anthropic"
-    prompt: 0.000003
-    completion: 0.000015
+    prompt: "3 / 1000000"
+    completion: "15 / 1000000"
   - name: "Claude-3 Haiku"
     variant: "claude-3-haiku-20240307"
     provider: "Anthropic"
-    prompt: 0.00000025
-    completion: 0.00000125
+    prompt: "0.25 / 1000000"
+    completion: "1.25 / 1000000"
   - name: "Gemini-1.0 Pro"
     variant: "gemini-1.0-pro"
     provider: "Google"
-    prompt: 0.0000005
-    completion: 0.0000015
+    prompt: "0.5 / 1000000"
+    completion: "1.5 / 1000000"
   - name: "Gemini-1.5 Flash"
     variant: "gemini-1.5-flash"
     provider: "Google"
-    prompt: 0.00000035
-    completion: 0.00000105
+    prompt: "0.35 / 1000000"
+    completion: "1.05 / 1000000"
   - name: "Gemini-1.5 Pro"
     variant: "gemini-1.5-pro"
     provider: "Google"
-    prompt: 0.00000175
-    completion: 0.0000105
+    prompt: "1.75 / 1000000"
+    completion: "10.5 / 1000000"
   - name: "Llama-2-7B"
     variant: "meta-llama/Llama-2-7b-chat-hf"
     provider: "Meta"
-    prompt: 0.0000002
-    completion: 0.0000002
+    prompt: "0.2 / 1000000"
+    completion: "0.2 / 1000000"
   - name: "Llama-2-13B"
     variant: "meta-llama/Llama-2-13b-chat-hf"
     provider: "Meta"
-    prompt: 0.00000022
-    completion: 0.00000022
+    prompt: "0.22 / 1000000"
+    completion: "0.22 / 1000000"
   - name: "Llama-2-70B"
     variant: "meta-llama/Llama-2-70b-chat-hf"
     provider: "Meta"
-    prompt: 0.0000009
-    completion: 0.0000009
+    prompt: "0.9 / 1000000"
+    completion: "0.9 / 1000000"
   - name: "Llama-3-8B"
     variant: "meta-llama/Llama-3-8b-chat-hf"
     provider: "Meta"
-    prompt: 0.0000002
-    completion: 0.0000002
+    prompt: "0.2 / 1000000"
+    completion: "0.2 / 1000000"
   - name: "Llama-3-70B"
     variant: "meta-llama/Llama-3-70b-chat-hf"
     provider: "Meta"
-    prompt: 0.0000009
-    completion: 0.0000009
+    prompt: "0.9 / 1000000"
+    completion: "0.9 / 1000000"
   - name: "Mistral-7B"
     variant: "mistralai/Mistral-7B-Instruct-v0.3"
     provider: "Mistral"
-    prompt: 0.0000002
-    completion: 0.0000002
+    prompt: "0.2 / 1000000"
+    completion: "0.2 / 1000000"
   - name: "Mixtral-8x7B"
     variant: "mistralai/Mixtral-8x7B-Instruct-v0.1"
     provider: "Mistral"
-    prompt: 0.0000006
-    completion: 0.0000006
+    prompt: "0.6 / 1000000"
+    completion: "0.6 / 1000000"
   - name: "Mixtral-8x22B"
     variant: "mistralai/Mixtral-8x22B-Instruct-v0.1"
     provider: "Mistral"
-    prompt: 0.0000012
-    completion: 0.0000012
+    prompt: "1.2 / 1000000"
+    completion: "1.2 / 1000000"
