--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,11 @@ models:
     provider: "OpenAI"
     prompt: "5 / 1000000"
     completion: "15 / 1000000"
+  - name: "GPT-4o Mini"
+    variant: "gpt-4o-mini-2024-07-18"
+    provider: "OpenAI"
+    prompt: "0.15 / 1000000"
+    completion: "0.6 / 1000000"
   - name: "Claude-3.5 Sonnet"
     variant: "claude-3-5-sonnet-20240620"
     provider: "Anthropic"
