--- a/config.yaml
+++ b/config.yaml
@@ -114,6 +114,11 @@ models:
     provider: "Meta"
     prompt: "0.9 / 1000000"
     completion: "0.9 / 1000000"
+  - name: "Llama-3.1-405B"
+    variant: "meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo"
+    provider: "Meta"
+    prompt: "5 / 1000000"
+    completion: "15 / 1000000"
   - name: "Mistral-7B"
     variant: "mistralai/Mistral-7B-Instruct-v0.3"
     provider: "Mistral"
