Added Mistral Large and all Llama 3.1 Models

--- a/config.yaml
+++ b/config.yaml
@@ -104,21 +104,21 @@ models:
     provider: "Meta"
     prompt: "0.9 / 1000000"
     completion: "0.9 / 1000000"
-  - name: "Llama-3-8B"
-    variant: "meta-llama/Llama-3-8b-chat-hf"
+  - name: "Llama-3.1-8B"
+    variant: "meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo"
     provider: "Meta"
-    prompt: "0.2 / 1000000"
-    completion: "0.2 / 1000000"
-  - name: "Llama-3-70B"
-    variant: "meta-llama/Llama-3-70b-chat-hf"
+    prompt: "0.18 / 1000000"
+    completion: "0.18 / 1000000"
+  - name: "Llama-3.1-70B"
+    variant: "meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo"
     provider: "Meta"
-    prompt: "0.9 / 1000000"
-    completion: "0.9 / 1000000"
+    prompt: "0.88 / 1000000"
+    completion: "0.88 / 1000000"
   - name: "Llama-3.1-405B"
     variant: "meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo"
     provider: "Meta"
     prompt: "5 / 1000000"
-    completion: "15 / 1000000"
+    completion: "5 / 1000000"
   - name: "Mistral-7B"
     variant: "mistralai/Mistral-7B-Instruct-v0.3"
     provider: "Mistral"
@@ -132,5 +132,10 @@ models:
   - name: "Mixtral-8x22B"
     variant: "mistralai/Mixtral-8x22B-Instruct-v0.1"
     provider: "Mistral"
+    prompt: "1.2 / 1000000"
+    completion: "1.2 / 1000000"
+  - name: "Mistral Large"
+    variant: "mistral-large-latest"
+    provider: "MistralM"
     prompt: "1.2 / 1000000"
     completion: "1.2 / 1000000"
