--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ database:
 # Vertex API settings
 api:
   project_id: "gen-lang-client-0130870695"
-  location: "europe-west2"
+  location: "us-central1"
 
 # Prompt template
 prompt_template: |
@@ -25,6 +25,9 @@ prompt_template: |
 
 # Other settings
 max_retries: 3
+initial_delay: 1
+max_delay: 60
+backoff_multiplier: 1.5
 valid_answers: ['A', 'B', 'C', 'D']
 
 # Model definitions
@@ -47,18 +50,38 @@ models:
   - name: "GPT-4o"
     variant: "gpt-4o-2024-05-13"
     provider: "OpenAI"
-    prompt: "5 / 1000000"
-    completion: "15 / 1000000"
+    prompt: "2.5 / 1000000"
+    completion: "10 / 1000000"
   - name: "GPT-4o Mini"
     variant: "gpt-4o-mini-2024-07-18"
     provider: "OpenAI"
     prompt: "0.15 / 1000000"
     completion: "0.6 / 1000000"
+  - name: "o1 Preview"
+    variant: "o1-preview-2024-09-12"
+    provider: "OpenAI"
+    prompt: "15 / 1000000"
+    completion: "60 / 1000000"
+  - name: "o1 Mini"
+    variant: "o1-mini-2024-09-12"
+    provider: "OpenAI"
+    prompt: "3 / 1000000"
+    completion: "12 / 1000000"
   - name: "Claude-3.5 Sonnet"
     variant: "claude-3-5-sonnet-20240620"
     provider: "Anthropic"
     prompt: "3 / 1000000"
     completion: "15 / 1000000"
+  - name: "Claude-3.5 Sonnet (New)"
+    variant: "claude-3-5-sonnet-20241022"
+    provider: "Anthropic"
+    prompt: "3 / 1000000"
+    completion: "15 / 1000000"
+  - name: "Claude-3.5 Haiku"
+    variant: "claude-3-5-haiku-20241022"
+    provider: "Anthropic"
+    prompt: "1 / 1000000"
+    completion: "5 / 1000000"
   - name: "Claude-3 Opus"
     variant: "claude-3-opus-20240229"
     provider: "Anthropic"
@@ -80,12 +103,12 @@ models:
     prompt: "0.5 / 1000000"
     completion: "1.5 / 1000000"
   - name: "Gemini-1.5 Flash"
-    variant: "gemini-1.5-flash"
+    variant: "gemini-1.5-flash-002"
     provider: "Google"
     prompt: "0.35 / 1000000"
     completion: "1.05 / 1000000"
   - name: "Gemini-1.5 Pro"
-    variant: "gemini-1.5-pro"
+    variant: "gemini-1.5-pro-002"
     provider: "Google"
     prompt: "1.75 / 1000000"
     completion: "10.5 / 1000000"
@@ -116,6 +139,11 @@ models:
     completion: "0.88 / 1000000"
   - name: "Llama-3.1-405B"
     variant: "meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo"
+    provider: "Meta"
+    prompt: "5 / 1000000"
+    completion: "5 / 1000000"
+  - name: "Llama-3.2-3B"
+    variant: "meta-llama/Llama-3.2-3B-Instruct-Turbo"
     provider: "Meta"
     prompt: "5 / 1000000"
     completion: "5 / 1000000"
